Improve inventory button styling - add delete button style and enhance edit button appearance

--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -25,9 +25,8 @@
 /* Logo */
 .logo-container {
   height: 50px;
-  display: flex;
   align-items: center;
-  margin-top: 10px;
+  margin: 0;
 }
 
 .logo-img {
